# shrLink

./: .gitignore  Cargo.toml  README.md  agent.md  fastapi_server.py  simple_server.py  web_ui.html
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/compression/: mod.rs
src/config/: mod.rs
src/fallback/: mod.rs
src/p2p/: mod.rs
tests/: integration.rs
