[package]
name = "shrlink"
version = "0.1.0"
edition = "2021"
description = "Fast P2P file sharing with compression and fallback"
license = "MIT"
authors = ["ShrLink Team"]

[[bin]]
name = "shr"
path = "src/main.rs"

[dependencies]
# CLI and UX
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Compression and hashing
lz4_flex = "0.11"
blake3 = "1.5"

# P2P networking
libp2p = { version = "0.53", features = ["quic", "kad", "dns", "autonat", "identify", "ping", "mdns", "noise", "yamux", "tcp", "macros", "tokio"] }
libp2p-swarm = "0.44"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# JSON serialization for HTTP API
serde_json = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
url = "2.5"
bytes = "1.5"
base64 = "0.21"
hex = "0.4"

# Parallel processing
rayon = "1.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System utilities
dirs = "5.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

[dev-dependencies]
tempfile = "3.8"
